--- a/index.html
+++ b/index.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>RIA SpeechBubble</title>
-  </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0; background: transparent; margin: 0px; overflow: hidden;">
-    <canvas id="unity-canvas" width=960 height=600 tabindex="-1" style="width: 960px; height: 600px; background:  transparent !important;"></canvas>
-    <script src="Build/Build.loader.js"></script>
-    <script>
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>RIA SpeechBubble</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: transparent;
+      overflow: hidden;
+    }
+    #unity-canvas {
+      background: transparent !important;
+    }
+  </style>
+</head>
+<body style="text-align: center;">
+  <canvas id="unity-canvas" width="960" height="600" tabindex="-1"></canvas>
+  <script src="Build/Build.loader.js"></script>
+  <script>
+    const canvas = document.querySelector("#unity-canvas");
 
-        var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "100%";
-        canvas.style.height = "100%";
-        canvas.style.position = "fixed";
+    // 모바일 대응
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      var meta = document.createElement('meta');
+      meta.name = 'viewport';
+      meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+      document.getElementsByTagName('head')[0].appendChild(meta);
 
-        document.body.style.textAlign = "left";
-      }
+      canvas.style.width = "100%";
+      canvas.style.height = "100%";
+      canvas.style.position = "fixed";
+      document.body.style.textAlign = "left";
+    }
 
-      createUnityInstance(document.querySelector("#unity-canvas"), {
-        arguments: [],
-        dataUrl: "Build/Build.data",
-        frameworkUrl: "Build/Build.framework.js",
-        codeUrl: "Build/Build.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "STTBubble_WebGL",
-        productVersion: "0.1.0",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      }).then((unityInstance) => {
-  // WebGL 컨텍스트 가져오기
-  const gl = canvas.getContext('webgl2', { alpha: true, premultipliedAlpha: false });
-  if (gl) {
-    console.log("WebGL context with alpha enabled");
-  });
-    </script>
-  </body>
+    // Unity 실행
+    createUnityInstance(canvas, {
+      arguments: [],
+      dataUrl: "Build/Build.data",
+      frameworkUrl: "Build/Build.framework.js",
+      codeUrl: "Build/Build.wasm",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "DefaultCompany",
+      productName: "STTBubble_WebGL",
+      productVersion: "0.1.0",
+      webglContextAttributes: { alpha: true, premultipliedAlpha: false } // 👈 여기 중요
+    }).then((unityInstance) => {
+      console.log("Unity instance loaded with transparent background");
+    }).catch((message) => {
+      alert(message);
+    });
+  </script>
+</body>
 </html>
