--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>RIA SpeechBubble</title>
+    <title>Unity WebGL Player | STTBubble_WebGL</title>
   </head>
-  <body style="text-align: center; padding: 0; border: 0; margin: 0; background: transparent; margin: 0px; overflow: hidden;">
-    <canvas id="unity-canvas" width=960 height=600 tabindex="-1" style="width: 960px; height: 600px; background:  transparent !important;"></canvas>
+  <body style="text-align: center; padding: 0; border: 0; margin: 0; background: transparent; overflow: hidden;">
+    <canvas id="unity-canvas" width=960 height=600 tabindex="-1" style="width: 960px; height: 600px; background: transparent"></canvas>
     <script src="Build/Build.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -25,7 +25,6 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        arguments: [],
         dataUrl: "Build/Build.data",
         frameworkUrl: "Build/Build.framework.js",
         codeUrl: "Build/Build.wasm",
